<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E6E2E2"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="79dp"
                    android:layout_height="100dp"
                    android:src="@drawable/skateboard7" />


                <TextView
                    android:id="@+id/info_text1"
                    android:layout_width="237dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="25dp" />


                <!--<CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp" />-->

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="386dp"
                android:layout_height="110dp"
                android:background="#E6E2E2"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="79dp"
                    android:layout_height="100dp"
                    android:src="@drawable/skateboard5" />


                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="237dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description2" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="25dp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/check_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#302D2D" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF9800"
        android:text="@string/go_back_to_home_page"
        android:onClick="launchFourthActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>