<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="598dp"
        android:layout_height="466dp"
        android:layout_marginTop="8dp"
        android:alpha="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boy2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="384dp"
        android:layout_height="379dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="72dp"
        android:justificationMode="inter_word"
        android:text="@string/info"
        android:textAlignment="textStart"
        android:textColor="#9E000000"
        android:textIsSelectable="false"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/who_are_we"
        android:textColor="#FF9800"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="135dp"
            android:layout_marginTop="3dp"
            app:srcCompat="@drawable/facebook"
            tools:layout_editor_absoluteX="362dp"
            tools:layout_editor_absoluteY="670dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="2dp"
            app:srcCompat="@drawable/twitter" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="0sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>