<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:contentDescription="@android:string/untitled"
                    android:src="@drawable/skateboard15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4F17120C"
                    android:text="@string/join"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:backgroundTint="#0017120C"
                    android:textColor="@color/white"
                    android:textSize="0sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="176dp"
                    android:layout_height="218dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="153dp"
                        android:layout_height="188dp"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/img"
                            android:layout_width="131dp"
                            android:layout_height="112dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/skateboard7"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginTop="12dp"
                            android:text="@string/name1"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.444"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/img" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginTop="4dp"
                            android:text="@string/price1"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/button9"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView11" />

                        <Button
                            android:id="@+id/button9"
                            android:layout_width="63dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="4dp"
                            android:backgroundTint="#FF9800"
                            android:onClick="launchSecondActivity"
                            android:text="View"
                            android:textSize="11sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/cardView4"
                    android:layout_width="180dp"
                    android:layout_height="218dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="187dp">

                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="131dp"
                            android:layout_height="112dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/skateboard5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="132dp"
                            android:layout_height="19dp"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginTop="12dp"
                            android:text="@string/name2"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.526"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/img1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/price2"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView12" />

                        <Button
                            android:id="@+id/button8"
                            android:layout_width="63dp"
                            android:layout_height="32dp"
                            android:backgroundTint="#FF9800"
                            android:text="View"
                            android:textSize="11sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="Who are we!"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:justificationMode="inter_word"
                android:text="We are Egyptian Skaters passionates who love skating and want to spread it everywhere. We offer you a safe area to  practise your hobby and empower it with qualified couches."
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#FF9800"
                android:text="Learn More"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:text="We are Egyptian Skaters passionates who love skating and want to spread it everywhere. We offer you a safe area to  practise your hobby and empower it with qualified couches."
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
